# gl_nbody

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile.linux  README.md  build.linux  gl_nbody.cbp  gl_nbody.layout  run.linux
external_libs/glew-1.10.0/lib/: libGLEW.so.1.10.0  libGLEWmx.so.1.10.0
include/: CMakeLists.txt  Camera.h  InputController.h  Makefile  Renderer.h  Util.h  cmake_install.cmake  renderer.h
src/: .gitignore  CMakeLists.txt  InputController.cpp  Makefile  Renderer.cpp  Util.cpp  cmake_install.cmake  main  main.c  main.cpp  renderer.cpp  renderer.h
src/shaders/: basic.frag  basic.vert
